# kinematics_project

./: .gitignore  README.md  main.py  pyproject.toml
LeRobot_SO101/: LeRobot_SO101.py
kinematics/: robot_3DoF.py  robot_6DoF.py  robot_nDoF.py  utils.py
so101_kinematics/: package.xml  setup.py
so101_kinematics/launch/: display.launch.py  display.launch.py.save  display_launch.sh  fk_debug.sh  fk_test.launch.py  fk_test_launch.sh  ros2_build.sh
so101_kinematics/so101_kinematics/: fk_debug_node.py  fk_node.py  robot_nDoF.py
so101_kinematics/urdf/: LeRobot_SO101.urdf
test/: test_nDoF.py
