[project]
name = "kinematics-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]


[tool.ruff]

line-length = 88


[tool.ruff.init]

select=["ALL"]

ignore = ["ISC001", "COM812"]
